--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,23 +4,24 @@ spring:
     profiles:
           active:
     datasource:
-            url: jdbc:mysql://192.168.200.130:3306/lms_kc?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+            url: jdbc:mysql://localhost:3306/spider?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
             username: root
             password: root
             driverClassName: com.mysql.jdbc.Driver
     data:
             mongodb:
-                    host: 192.168.200.130
+                    host: localhost
                     database: items
     redis:
-            host: 192.168.200.130
+            host: localhost
             port: 6379
             pool:
                   max-idle: 8
                   min-idle: 0
                   max-active: 8
                   max-wait: -1
-
+logging:
+  file: /usr/local/pro/logs/spider.log
 
 
 
