--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,10 +4,11 @@ spring:
     profiles:
           active:
     datasource:
-            url: jdbc:mysql://192.168.200.130:3306/spider?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+#            url: jdbc:mysql://192.168.200.129:3306/spider?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+            url: jdbc:postgresql://192.168.200.129:5432/spider
             username: root
             password: root
-            driverClassName: com.mysql.jdbc.Driver
+            driverClassName: org.postgresql.Driver
     data:
             mongodb:
                     host: 192.168.200.130
@@ -20,10 +21,9 @@ spring:
                   min-idle: 0
                   max-active: 8
                   max-wait: -1
-logging:
-  file: C:\\Temp\\spider.log
-
-
-
+    jpa:
+      hibernate:
+        ddl-auto: none
+      show-sql: true
 
 
