--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <artifactId>spider</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <name>spider</name>
 
     <description>Demo project for Spring Boot</description>
 
@@ -102,6 +103,7 @@
     </dependencies>
 
     <build>
+        <finalName>spider</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
