--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -20,3 +20,11 @@ spring:
     redis:
       host: 172.19.26.63
       port: 6379
+      jedis:
+        pool:
+          max-active: 8
+          max-idle: 8
+          max-wait: 1
+          min-idle: 0
+      timeout: 0
+      database: 0
